; ModuleID = '/home/carl/AnghaBench/skynet/lualib-src/extr_lua-socket.c_ludp_connect.c'
source_filename = "/home/carl/AnghaBench/skynet/lualib-src/extr_lua-socket.c_ludp_connect.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.skynet_context = type { i32 }

@.str = private unnamed_addr constant [19 x i8] c"udp connect failed\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @ludp_connect to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ludp_connect(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca %struct.skynet_context*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i32, align 4
  %11 = alloca i8*, align 8
  %12 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  %13 = load i32*, i32** %3, align 8
  %14 = call i32 @lua_upvalueindex(i32 1)
  %15 = call %struct.skynet_context* @lua_touserdata(i32* %13, i32 %14)
  store %struct.skynet_context* %15, %struct.skynet_context** %4, align 8
  %16 = load i32*, i32** %3, align 8
  %17 = call i32 @luaL_checkinteger(i32* %16, i32 1)
  store i32 %17, i32* %5, align 4
  store i64 0, i64* %6, align 8
  %18 = load i32*, i32** %3, align 8
  %19 = call i8* @luaL_checklstring(i32* %18, i32 2, i64* %6)
  store i8* %19, i8** %7, align 8
  %20 = load i64, i64* %6, align 8
  %21 = call i8* @llvm.stacksave()
  store i8* %21, i8** %8, align 8
  %22 = alloca i8, i64 %20, align 16
  store i64 %20, i64* %9, align 8
  store i32 0, i32* %10, align 4
  store i8* null, i8** %11, align 8
  %23 = load i8*, i8** %7, align 8
  %24 = icmp ne i8* %23, null
  br i1 %24, label %25, label %29

25:                                               ; preds = %1
  %26 = load i32*, i32** %3, align 8
  %27 = load i8*, i8** %7, align 8
  %28 = call i8* @address_port(i32* %26, i8* %22, i8* %27, i32 3, i32* %10)
  store i8* %28, i8** %11, align 8
  br label %29

29:                                               ; preds = %25, %1
  %30 = load %struct.skynet_context*, %struct.skynet_context** %4, align 8
  %31 = load i32, i32* %5, align 4
  %32 = load i8*, i8** %11, align 8
  %33 = load i32, i32* %10, align 4
  %34 = call i64 @skynet_socket_udp_connect(%struct.skynet_context* %30, i32 %31, i8* %32, i32 %33)
  %35 = icmp ne i64 %34, 0
  br i1 %35, label %36, label %39

36:                                               ; preds = %29
  %37 = load i32*, i32** %3, align 8
  %38 = call i32 @luaL_error(i32* %37, i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0))
  store i32 %38, i32* %2, align 4
  store i32 1, i32* %12, align 4
  br label %40

39:                                               ; preds = %29
  store i32 0, i32* %2, align 4
  store i32 1, i32* %12, align 4
  br label %40

40:                                               ; preds = %39, %36
  %41 = load i8*, i8** %8, align 8
  call void @llvm.stackrestore(i8* %41)
  %42 = load i32, i32* %2, align 4
  ret i32 %42
}

declare dso_local %struct.skynet_context* @lua_touserdata(i32*, i32) #1

declare dso_local i32 @lua_upvalueindex(i32) #1

declare dso_local i32 @luaL_checkinteger(i32*, i32) #1

declare dso_local i8* @luaL_checklstring(i32*, i32, i64*) #1

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #2

declare dso_local i8* @address_port(i32*, i8*, i8*, i32, i32*) #1

declare dso_local i64 @skynet_socket_udp_connect(%struct.skynet_context*, i32, i8*, i32) #1

declare dso_local i32 @luaL_error(i32*, i8*) #1

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
